# booker

./: .gitignore  CMakeLists.txt
include/: Exceptions.hpp  Kraken.hpp  LeveledOrderBook.hpp  OrderBook.hpp  Symbol.hpp  TriangularArbitrageFinder.hpp  Utils.hpp  constants.hpp
include/connector/input/: Kraken.hpp
src/: Booker.cpp  Kraken.cpp  LeveledOrderBook.cpp  OrderBook.cpp  TriangularArbitrageFinder.cpp  Utils.cpp
src/connector/input/: Kraken.cpp
src/connector/trade/: KrakenAuthenticated.cpp
